microservices/devops/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logikchain-backend
  labels:
    app.kubernetes.io/part-of: logikchain
